# psychjobs

./: README.md  pyproject.toml  setup.cfg  setup.py
src/psychjobs/: wiki.py
