[metadata]
name = psychjobs
version = 0.1.0
url = https://github.com/mortonne/psychjobs
author = Neal Morton
author_email = mortonne@gmail.com
description = PsychJobs: Information about psychology faculty positions
long_description = file: README.md
long_description_content_type = text/markdown
keywords = psychology, jobs
license = GPL-3.0-or-later
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
install_requires =
    beautifulsoup4
    pandas
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
